smart-house-microservice/k8s/analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics
  template:
    metadata:
      labels:
        app: analytics
    spec:
      containers:
      - name: analytics
        image: 2023sl93054/analytics-service:latest
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: microservices
spec:
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
