smart-house-microservice/k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: 2023sl93054/user-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: microservices
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
