smart-house-microservice/k8s/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microservices.local
      http:
        paths:
          - path: /api/v1/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8084
          - path: /api/v1/device-control
            pathType: Prefix
            backend:
              service:
                name: device-control-service
                port:
                  number: 8083
          - path: /api/v1/device-register
            pathType: Prefix
            backend:
              service:
                name: device-register-service
                port:
                  number: 8082
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
